k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: payslip 
  name: payslip
  namespace: goosle
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: payslip
